--- a/D3D11Engine/D3D11Engine.vcxproj
+++ b/D3D11Engine/D3D11Engine.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="Helper\Editor_Helper.h" />
     <ClInclude Include="Helper\FileDialog.h" />
     <ClInclude Include="Helper\Icon_Provider.h" />
+    <ClInclude Include="Helper\ImGui_Helper.h" />
     <ClInclude Include="ImGui\ImGuizmo.h" />
     <ClInclude Include="ImGui\imgui_impl_dx11.h" />
     <ClInclude Include="ImGui\imgui_impl_win32.h" />
