--- a/D3D11Engine/imgui.ini
+++ b/D3D11Engine/imgui.ini
@@ -1,30 +1,30 @@
 [Window][Scene]
-Pos=447,61
-Size=1070,590
+Pos=359,61
+Size=1151,590
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,61
-Size=445,590
+Size=357,590
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector]
-Pos=1519,61
-Size=401,956
+Pos=1512,61
+Size=408,956
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Project]
 Pos=0,653
-Size=545,364
+Size=488,364
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Console]
-Pos=384,468
-Size=586,252
+Pos=490,653
+Size=1020,364
 Collapsed=0
 DockId=0x00000008,0
 
@@ -59,8 +59,8 @@ Size=800,800
 Collapsed=0
 
 [Window][Log]
-Pos=547,653
-Size=970,364
+Pos=547,680
+Size=970,381
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -69,16 +69,21 @@ Pos=134,339
 Size=297,366
 Collapsed=0
 
+[Window][Progress...]
+Pos=60,60
+Size=500,83
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x9258F120 Pos=0,61 Size=1920,956 Split=X
-  DockNode        ID=0x00000001 Parent=0x9258F120 SizeRef=1517,681 Split=Y
+  DockNode        ID=0x00000001 Parent=0x9258F120 SizeRef=1510,681 Split=Y
     DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=757,617 Split=X SelectedTab=0x18B8C0DE
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=445,378 SelectedTab=0x788BAA0D
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=1070,378 CentralNode=1 SelectedTab=0x18B8C0DE
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=357,378 SelectedTab=0x788BAA0D
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=1151,378 CentralNode=1 SelectedTab=0x18B8C0DE
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=757,381 Split=X
-      DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=401,204 Split=X SelectedTab=0xE00EE972
+      DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=488,204 Split=X SelectedTab=0xE00EE972
         DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=545,252 SelectedTab=0xE00EE972
         DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=970,252 SelectedTab=0xB7722E25
-      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=615,204 SelectedTab=0xF9BEF62A
-  DockNode        ID=0x00000002 Parent=0x9258F120 SizeRef=401,681 SelectedTab=0xF02CD328
+      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=1020,204 SelectedTab=0xF9BEF62A
+  DockNode        ID=0x00000002 Parent=0x9258F120 SizeRef=408,681 SelectedTab=0xF02CD328
 
