--- a/D3D11Framework/D3D11Framework.vcxproj.filters
+++ b/D3D11Framework/D3D11Framework.vcxproj.filters
@@ -53,7 +53,6 @@
     <ClInclude Include="Script\Script_Module.h" />
     <ClInclude Include="Script\Script_Instance.h" />
     <ClInclude Include="Scene\Component\Script.h" />
-    <ClInclude Include="Core\D3D11Graphics\BasicData\D3D11_Config.h" />
     <ClInclude Include="Core\D3D11Graphics\BasicData\Geometry.h" />
     <ClInclude Include="Core\D3D11Graphics\BasicData\Geometry.inl" />
     <ClInclude Include="Core\D3D11Graphics\BasicData\Vertex.h" />
@@ -86,6 +85,8 @@
     <ClInclude Include="Math\Plane.h" />
     <ClInclude Include="Gizmo\Rect.h" />
     <ClInclude Include="Utility\Geometry_Generator.h" />
+    <ClInclude Include="Core\D3D11Graphics\BasicData\D3D11_ConstantData.h" />
+    <ClInclude Include="Core\D3D11Graphics\Command.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="D3D11Framework.cpp" />
@@ -162,6 +163,7 @@
     <ClCompile Include="Math\Plane.cpp" />
     <ClCompile Include="Gizmo\Rect.cpp" />
     <ClCompile Include="Utility\Geometry_Generator.cpp" />
+    <ClCompile Include="Core\D3D11Graphics\Command.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
